style(NavBar): Fix nav and navbar menu spacing and cursor issues; remove right padding from the last nav item

--- a/src/components/NavBar/_NavBar.scss
+++ b/src/components/NavBar/_NavBar.scss
@@ -10,7 +10,6 @@ nav {
 	position: fixed;
 	color: $black;
 	width: 100%;
-	justify-content: space-between;
 	align-items: center;
 	height: $navbar-mobile-height;
 	top: 0;
@@ -59,8 +58,6 @@ nav {
 	list-style: none;
 	position: relative;
 	margin-top: 0;
-	justify-content: space-between;
-	width: 100%;
 	height: 100%;
 	transform: none;
 }
@@ -79,6 +76,7 @@ nav {
 	display: flex;
 	height: 100%;
 	list-style-type: none;
+	cursor: pointer;
 
 	@include hover-underline-target('.nav-link-text', $teal-accent, $teal-accent, 1.5px);
 
@@ -90,11 +88,16 @@ nav {
 		margin-bottom: 0;
 		padding: 0 1rem;
 	}
+
+	&.last-child a {
+		padding-right: 0;
+	}
 }
 
 .nav-item.active,
 .nav-item.active a {
 	transform: none;
+	cursor: default;
 
 	.nav-link-text {
 		color: $teal-accent !important;
@@ -132,5 +135,9 @@ nav {
 		.nav-item:last-child {
 			padding-right: 0;
 		}
+	}
+
+	.navbar-menu {
+		gap: 0;
 	}
 }
